# dlt-sync

./: README.md  dlt-sync-requirements.md  gist.md  new-dlt.py  newconfig.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
examples/: airflow_dag_example.py  basic_usage.py  configuration_examples.py
src/: __init__.py
src/config/: __init__.py  models.py
src/pipeline/: __init__.py  core.py  decimal_handler.py  partition_handler.py  scd_handler.py  sql_utils.py  state_manager.py  static_handler.py
src/utils/: __init__.py  logging.py  validation.py
tests/: __init__.py  conftest.py  test_config_models.py  test_decimal_handler.py  test_state_manager.py
